<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    >


    <Button
        android:id="@+id/button_entrantes"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/category_entrantes"
        android:textSize="35sp"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/button_principales"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/category_principales"
        android:textSize="35sp"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/button_postres"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/category_postres"
        android:textSize="35sp"
        android:layout_margin="30dp"/>


</LinearLayout>